kubernetes/argocd/apps/workloads/foundry/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry
  labels:
    app: foundry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundry
  template:
    metadata:
      labels:
        app: foundry
    spec:
      containers:
        - name: foundry
          image: felddy/foundryvtt:14.368.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 30000
          volumeMounts:
            - name: foundry-data
              mountPath: /data
      volumes:
        - name: foundry-data
          persistentVolumeClaim:
            claimName: foundry-data
