kubernetes/argocd/apps/workloads/foundry/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: foundry
  labels:
    app: foundry
spec:
  ports:
    - name: http
      port: 80
      targetPort: 30000
      protocol: TCP
  selector:
    app: foundry
