kubernetes/argocd/apps/workloads/foundry/manifests/public-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-public
  labels:
    app: foundry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: traefik-default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: "foundry.paulynomial.com"
      http:
        paths:
          - backend:
              service:
                name: foundry
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - foundry.paulynomial.com
      secretName: foundry-paulynomial-com-tls
