kubernetes/argocd/apps/workloads/foundry/manifests/tailscale-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foundry-tailscale
  labels:
    app: foundry
  annotations:
    tailscale.com/hostname: "foundry"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: foundry
      port:
        number: 80
  tls:
    - hosts:
        - foundry
